# guerillamail-con

./: .gitignore  CMakeLists.txt  README.md
debug-helper/dbg/: debug.h  debug.h.in
lib/: CMakeLists.txt
lib/guerillamail-api/: CMakeLists.txt  guerillamail-api.c  guerillamail-api.h  guerillamail-structs.c  guerillamail-structs.h
src/: CMakeLists.txt  guerillamail-client.c
src/console/: guerillamail-console-client-common.c  guerillamail-console-client-common.h  guerillamail-console-client.c  guerillamail-console-client.h
